--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "medium-extension",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack/webpack.config.js"
+    "dev": "rm -rf dist/* && NODE_ENV=dev webpack --config webpack/webpack.config.js",
+    "build": "rm -rf dist/* && webpack --config webpack/webpack.config.js"
   },
   "keywords": [],
   "author": "",
