Updated logos and interface

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,15 @@
 {
 	"name": "Series Saver",
 	"description": "This extension is remembering you notice about TV series",
-	"version": "1.1",
+	"version": "1.2",
 	"manifest_version": 3,
 	"icons": {
-		"16": "./icons/icon_16.png",
-		"48": "./icons/icon_48.png"
+		"16": "./icons/logo_16.png",
+		"48": "./icons/logo_48.png"
 	},
 	"action": {
 		"default_popup": "popup.html",
-		"default_icon": "./icons/popup.png"
+		"default_icon": "./icons/logo_64.png"
 	},
 	"permissions": [
 		"activeTab",
@@ -17,5 +17,12 @@
 	],
 	"background": {
 		"service_worker": "background.js"
-	}
+	},
+	"web_accessible_resources": [
+		{
+			"resources": ["icons/logo_256.png"],
+			"matches": [ "<all_urls>" ],
+			"use_dynamic_url": true
+		}
+	]
 }
